--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "belgian-vsc-ogm",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "index.js",
+  "keywords": [
+    "structured message",
+    "ogm",
+    "gestructureerde mededeling",
+    "mededeling",
+    "vsc"
+  ],
   "description": "OGM, 'overschrijving met gestructureerde mededeling', is a structured message often added to belgian bank transfers to enable automatic processing. This package enables the generation and validation of these structured messages",
   "author": "Stefan Pante",
   "license": "ISC",
