--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "belgian-vsc-ogm",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "index.js",
   "keywords": [
     "structured message",
@@ -12,7 +12,7 @@
   "description": "OGM, 'overschrijving met gestructureerde mededeling', is a structured message often added to belgian bank transfers to enable automatic processing. This package enables the generation and validation of these structured messages",
   "author": "Stefan Pante",
   "license": "ISC",
-  "private": true,
+  "private": false,
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover --dir ./coverage ./node_modules/.bin/_mocha -- -R spec -t 15000 --recursive --slow 2"
   },
