--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "belgian-vsc-ogm",
-  "version": "1.0.0",
+  "name": "belgian-vcs-ogm",
+  "version": "0.0.0",
   "main": "index.js",
   "keywords": [
     "structured message",
     "ogm",
     "gestructureerde mededeling",
     "mededeling",
-    "vsc"
+    "vcs"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stefanpante/Node-Belgian-VCS-OGM.git"
+  },
+  "author": "Stefan Pante <me@stefanpante.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stefanpante/Node-Belgian-VCS-OGM/issues"
+  },
+  "homepage": "https://github.com/stefanpante/Node-Belgian-VCS-OGM#readme",
   "description": "OGM, 'overschrijving met gestructureerde mededeling', is a structured message often added to belgian bank transfers to enable automatic processing. This package enables the generation and validation of these structured messages",
   "author": "Stefan Pante",
   "license": "ISC",
